--- a/index.html
+++ b/index.html
@@ -5,42 +5,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NovaEdge</title>
     <link rel="stylesheet" href="style.css">
-    <script src="script.js" defer></script>
 </head>
 <body>
-    <header>
-        <h1 class="fade-in">NovaEdge</h1>
-        <nav>
-            <a href="#about">О компании</a>
-            <a href="#services">Услуги</a>
-            <a href="#contacts">Контакты</a>
-        </nav>
-    </header>
 
-    <main>
-        <section id="about" class="fade-in">
-            <h2>О компании</h2>
-            <p>Искусство двигать границы.</p>
-        </section>
+<header>
+    <nav>
+        <a href="#about">О компании</a>
+        <a href="#contact">Контакты</a>
+    </nav>
+</header>
 
-        <section id="services" class="fade-in">
-            <h2>Наши услуги</h2>
-            <p>Режем грани перемен вместе с вами!</p>
-        </section>
+<main>
+    <section id="about" class="fade-in">
+        <h1>Искусство двигать границы</h1>
+        <p>NovaEdge — ваш партнёр в создании новых возможностей. Мы создаём инновационные решения для бизнеса.</p>
+    </section>
 
-        <section id="contacts" class="fade-in">
-            <h2>Контакты</h2>
-            <form>
-                <input type="text" placeholder="Ваше имя" required>
-                <input type="email" placeholder="Ваш Email" required>
-                <textarea placeholder="Ваше сообщение" required></textarea>
-                <button type="submit">Отправить</button>
-            </form>
-        </section>
-    </main>
+    <section id="contact" class="fade-in">
+        <h2>Связаться с нами</h2>
+        <form>
+            <input type="text" placeholder="Ваше имя" required>
+            <input type="email" placeholder="Ваш email" required>
+            <textarea placeholder="Ваше сообщение" required></textarea>
+            <button type="submit">Отправить</button>
+        </form>
+    </section>
+</main>
 
-    <footer class="fade-in">
-        <p>© 2025 NovaEdge. Все права защищены.</p>
-    </footer>
+<footer>
+    © 2025 NovaEdge
+</footer>
+
+<script src="script.js"></script>
 </body>
 </html>
